<?xml version="1.0" encoding="utf-8"?>
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:background="@drawable/ba1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <Button
                android:id="@+id/back2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="1dp"
                android:text="@string/back" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="0dp"
        android:text="@string/save" />

    <TableLayout
        android:id="@+id/table1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="65dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                
                android:inputType="textPersonName"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex"
                android:textAlignment="center"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/radiogroup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/radioButton15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/female" />
            </RadioGroup>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birthday"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date" />

            <Button
                android:id="@+id/buttonCalendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:ems="10"
                android:inputType="phone"
            />

            <Button
                android:id="@+id/buttonContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact"
                android:textSize="12sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:ems="10"
                android:inputType="text"
                />
            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:orientation="horizontal">-->

                <!--<Spinner-->
                    <!--android:id="@+id/spinner"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_weight="1"  />-->

                <!--<Spinner-->
                    <!--android:id="@+id/spinner2"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_weight="1" />-->
            <!--</LinearLayout>-->

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/habit"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />


        </TableRow>

    </TableLayout>

    <!--profile_edit-->
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"
        android:layout_below="@+id/table1"
        android:layout_marginTop="10dp"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie" />

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comic" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/music" />

            <CheckBox
                android:id="@+id/checkBox6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sports" />

            <CheckBox
                android:id="@+id/checkBox7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reading" />

            <CheckBox
                android:id="@+id/checkBox8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/technology" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="285dp"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:shownWeekCount="20"
        android:visibility="invisible"
        android:weekSeparatorLineColor="@color/beige" />

    <!--<ImageView-->
        <!--android:id="@+id/imageView1"-->
        <!--android:layout_height="100dp"-->
        <!--android:layout_width="100dp"-->
        <!--android:scaleType="centerCrop"-->
        <!--android:background="#e0000000"-->

        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginTop="54dp"-->

        <!--app:srcCompat="@drawable/moon" />-->



</RelativeLayout>
