<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/piano"

    tools:context=".Main.MainActivity">


    <TableLayout
        android:id="@+id/table1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:visibility="visible">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewUid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"

                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/editTextUId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@android:color/white" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textViewPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:textColor="@android:color/white" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textViewPasswordConform"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passwordConform"
                android:textColor="@android:color/white"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/editTextPasswordConform"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:textColor="@android:color/white" />
        </TableRow>


    </TableLayout>

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/table1"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"

        android:layout_marginTop="100dp"
        android:text="@string/apphead"
        android:textColor="@color/mintcream"
        android:textSize="24sp" />


    <ImageView
        android:id="@+id/imageView1"
        android:layout_height="50dp"
        android:layout_width="50dp"
        android:scaleType="centerCrop"
        android:background="#e0000000"
        android:layout_alignParentTop="true"
        android:layout_marginTop="90dp"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="5dp"
        android:layout_toLeftOf="@id/textView0"
        app:srcCompat="@drawable/tree" />


    <View
        android:id="@+id/line1"
        android:layout_width="1dp"
        android:layout_height="18dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:background="@color/white" />

    <TextView
        android:id="@+id/textViewForget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/line1"
        android:layout_marginEnd="20dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:text="@string/forget" />

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/line1"
        android:layout_marginStart="20dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:text="@string/loginTip" />

    <TextView
        android:id="@+id/textViewIssue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/issueTip"
        android:textColor="@color/white"
        android:textSize="14sp" />

</RelativeLayout>